<resources>
    <string name="app_name">tarea06Alarmas</string>
    <string name="alarm">Alarma</string>
    <string name="clock">Reloj mundial</string>
    <string name="chronometer">Cronómetro</string>
    <string name="timer">Temporizador</string>
    <string name="edit">Editar</string>
    <string name="settings">Ajustes</string>
    <string name="fab_button_description">Botón flotante para añadir nuevas alarmas</string>
    <string name="alarm1"><b>7:30</b></string>
    <string name="description_alarm">Sonar una vez</string>
    <string name="description2_alarm">Alarma despertador</string>
    <string name="subtitle">Sonar en 5 horas y 58 minutos</string>
</resources>