<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.tarea06alarmas.features.time.presentation.adapter.TimeViewHolder">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_s"
        app:cardCornerRadius="@dimen/margin_xm"
        app:cardElevation="@dimen/margin_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xm">

            <TextView
                android:id="@+id/title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm1"
                android:textColor="#DFDACC"
                android:textSize="@dimen/title_size_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description1_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_alarm"
                android:textColor="#DFDACC"
                android:textSize="@dimen/text_body_size_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_time" />

            <TextView
                android:id="@+id/description2_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:text="@string/description2_alarm"
                android:textColor="#DFDACC"
                android:textSize="@dimen/text_body_size_m"
                app:layout_constraintStart_toEndOf="@+id/description1_time"
                app:layout_constraintTop_toBottomOf="@+id/title_time" />


            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:enabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>